--- a/pset15.tex
+++ b/pset15.tex
@@ -81,9 +81,9 @@ The problems below make use of concepts and definitions from Sections 10.1 and 1
   
   \question A \textit{perfect matching} in a graph is a matching that covers every vertex of the graph. Prove that if all the vertices of a bipartite graph have the same degree, then it has a perfect matching.
   \begin{solution}
-    A perfect matching in bipartite graph, $G=(V,E)$, with bipartitions, $V_1$ and $V_2$, will be a complete matching from $V_1$ to $V_2$ and from $V_2$ to $V_1$. We show that both $V_1$ and $V_2$ satisfy Hall's marriage theorem if every vertex in $G$ has a common degree, $d$. Thus, a complete matching exists in $G$.
+    A perfect matching in a bipartite graph, $G=(V,E)$, with bipartitions, $V_1$ and $V_2$, will be a complete matching from $V_1$ to $V_2$ and from $V_2$ to $V_1$. We show that both $V_1$ and $V_2$ satisfy Hall's marriage theorem if every vertex in $G$ has a common degree, $d$. Thus, a complete matching exists in $G$.
 
-    \begin{proof} A bipartite graph with a common degree, $d$, for every vertex has a complete matching.
+    \begin{proof} A bipartite graph with a common degree, $d$, for every vertex has a perfect matching.
 
       Consider a set, $A$, of vertices that is a subset of $V_1$ or of $V_2$.\\
       We consider 2 cases: $|A|\le d$ and$|A|> d$.
